👨📺 Checkpoint ./index.html:65479926/123 ./style.css:65479926/4553

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <h4>
       Welcome to Edison!
     </h4>
-    <img src="">
+    <img src="https://4.bp.blogspot.com/-CFLEG6-wAzk/Tyr9WsNq0aI/AAAAAAAAAAc/j51ty-GWg0I/s1600/100_4068.JPG" class="edisonfrontdoor">
   </body>
 </html>
