--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <h1>
       Thomas A. Edison Career and Technical Education High School
     </h1>
-    <h4>
-      Welcome to Edison!
-    </h4>
+    <marquee>
+      Welcome to Edison! <img src="https://www.taehs.org/pics/school_logo.png" class="marqueeimg">
+    </marquee>
     <img src="https://4.bp.blogspot.com/-CFLEG6-wAzk/Tyr9WsNq0aI/AAAAAAAAAAc/j51ty-GWg0I/s1600/100_4068.JPG" class="edisonfrontdoor">
   </body>
 </html>
