--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Thomas A. Edison Career and Technical Education High School - Edison Makeover</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
+    <link rel="icon" href="https://pbs.twimg.com/profile_images/1436328729282764801/-bKoMQfK_400x400.jpg" />
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
     
@@ -46,12 +46,9 @@
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
   </head>
 <body>
-  <div class="header">
-    <img src="https://www.taehs.org/pics/school_logo.png" class="taehslogo">
     <h1>
       Thomas A. Edison Career and Technical Education High School
     </h1>
-  </div>
     <marquee>
       Welcome to Edison! <img src="https://www.taehs.org/pics/school_logo.png" class="marqueeimg"> Welcome to Edison! <img src="https://www.taehs.org/pics/school_logo.png" class="marqueeimg"> Welcome to Edison! <img src="https://www.taehs.org/pics/school_logo.png" class="marqueeimg"> Welcome to Edison! <img src="https://www.taehs.org/pics/school_logo.png" class="marqueeimg"> Welcome to Edison! <img src="https://www.taehs.org/pics/school_logo.png" class="marqueeimg">
     </marquee>
