🛳📫 Checkpoint ./style.css:65479926/571 ./index.html:65479926/1953 ./staff.html:65479926/259 ./clubs.html:65479926/184 ./contact.html:65479926/221

--- a/index.html
+++ b/index.html
@@ -13,37 +13,13 @@
 
     <a href="index.html">Home</a>
 
-    <a href="Syeda Samantha Resume.pdf" target="_blank">Resume</a>
-    <h6 class="resumesum">Link to my Resume!</h6>
+    <a href="staff.html" class="stafflink">Administration/Staff</a>
 
-    <a href="https://syedas11.github.io/replit" target="_blank"
-      class="hiremeprofilelink">HireMe Profile</a>
-    <h6 class="hiremeprofilesum">A resume or hire me profile I did about a friend of mine. They acted as my client while
-      I was the coder, listening to suggestions of his.</h6>
-
-    <a href="https://syedas11.github.io/Unit-6-Project" target="_blank">jQuery Adventure!</a>
-    <h6 class="jquerysum">An adventure game that I coded, exploring jQuery for the first time!</h6>
-
-    <a href="https://syedas11.github.io/Review-Lesson-Chat-Independent-Practice/" target="_blank">Review Lesson Chat</a>
-    <h6 class="textmessagepopcode">An independent practice that we did in class to review jQuery and past HTML and CSS.
-    </h6>
-
-    <a href="https://syedas11.github.io/Syeda-Samantha--Character-Quiz" target="_blank">Character Quiz</a>
-    <h6 class="characterquizpopcode">A quiz that I coded to find out which food you were. It was a project done using
-      jQuery, CSS, and HTML.</h6>
-
-    <a href="https://syedas11.github.io/Hello/" target="_blank">Array Project</a>
-    <h6 class="jquerysum">A project that I did for my CTE class. It uses newly learned commands in jQuery to add images
-      and remove the most recent image added as well.</h6>
-
-    <a href="https://knowthat.glitch.me/index.html" target="_blank">Genocide Presentation</a>
-    <h6 class="genocidepresentation">This is a presentation that we did in our CTE class. It was any topic that dealt with a social issue and my team and I decided to make a website educating people on genocide.</h6>
-
-    <a href="contact.html">Contact Me Here!</a>
-    <h6 class="contactsum">Contact me here!</h6>
-    <br>
+    <a href="clubs.html"class="clubslink">Clubs/Organizations</a>
+   
+    <a href="contact.html" class="contactlink">Contact Us Here!</a>
   </div>
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+  <span style="font-size:30px;cursor:pointer;" onclick="openNav()">&#9776;</span>
   </head>
 <body>
     <h1>
