--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
   <span style="font-size:30px;cursor:pointer;" onclick="openNav()">&#9776;</span>
   </head>
 <body>
+  <img src="https://www.taehs.org/pics/school_logo.png" class="taehslogo">
     <h1>
       Thomas A. Edison Career and Technical Education High School
     </h1>
     <marquee>
-      Welcome to Edison! <img src="https://www.taehs.org/pics/school_logo.png" class="marqueeimg"> Welcome to Edison! <img src="https://www.taehs.org/pics/school_logo.png" class="marqueeimg"> Welcome to Edison! <img src="https://www.taehs.org/pics/school_logo.png" class="marqueeimg"> Welcome to Edison! <img src="https://www.taehs.org/pics/school_logo.png" class="marqueeimg"> Welcome to Edison! <img src="https://www.taehs.org/pics/school_logo.png" class="marqueeimg">
+      Welcome to Edison! Welcome to Edison! Welcome to Edison! Welcome to Edison! Welcome to Edison!
     </marquee>
     <img src="https://4.bp.blogspot.com/-CFLEG6-wAzk/Tyr9WsNq0aI/AAAAAAAAAAc/j51ty-GWg0I/s1600/100_4068.JPG" class="edisonfrontdoor">
   </body>
