👻😇 Checkpoint ./index.html:65479926/125 ./style.css:65479926/139

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1>
       Thomas A. Edison Career and Technical Education High School
     </h1>
-    <marquee>
+    <marquee behavior="scroll" direction="left" scrollamount="10">
       Welcome to Edison! Welcome to Edison! Welcome to Edison! Welcome to Edison! Welcome to Edison!
     </marquee>
     <img src="https://4.bp.blogspot.com/-CFLEG6-wAzk/Tyr9WsNq0aI/AAAAAAAAAAc/j51ty-GWg0I/s1600/100_4068.JPG" class="edisonfrontdoor">
