🌲👨‍👨‍👦 Checkpoint ./staff.html:65479926/68 ./style.css:65479926/303

--- a/staff.html
+++ b/staff.html
@@ -38,7 +38,7 @@
       <tr>
         <td>Moses Ojeda<br>Principal</td>\
         <td>(718) 297-6580<br>Ext. 1271</td>
-        <td></td>
+        <td><a href="mailto:MOjeda3@schools.nyc.gov">MOjeda3@schools.nyc.gov</a></td>
       </tr>
     </table>
   </body>
