🌗🚡 Checkpoint ./style.css:65479926/159 ./staff.html:65479926/723

--- a/staff.html
+++ b/staff.html
@@ -36,9 +36,19 @@
         <th>Email</th>
       </tr>
       <tr>
-        <td>Moses Ojeda<br>Principal</td>\
+        <td>Moses Ojeda<br>Principal</td>
         <td>(718) 297-6580<br>Ext. 1271</td>
         <td><a href="mailto:MOjeda3@schools.nyc.gov">MOjeda3@schools.nyc.gov</a></td>
+      </tr>
+      <tr>
+        <td>Emanuel Collado<br>Assistant Principal Organization</td>
+        <td>(718) 297-6580<br>Ext. 1311</td>
+        <td><a href="mailto:ECollad@schools.nyc.gov ">ECollad@schools.nyc.gov </a></td>
+      </tr>
+      <tr>
+        <td>Adam Boxer <br>Assistant Principal of Information Systems</td>
+        <td>(718) 297-6580<br>Ext. 1311</td>
+        <td><a href="mailto:ECollad@schools.nyc.gov ">ECollad@schools.nyc.gov </a></td>
       </tr>
     </table>
   </body>
