🚝🔨 Checkpoint ./staff.html:65479926/3719

--- a/staff.html
+++ b/staff.html
@@ -43,12 +43,47 @@
       <tr>
         <td>Emanuel Collado<br>Assistant Principal Organization</td>
         <td>(718) 297-6580<br>Ext. 1311</td>
-        <td><a href="mailto:ECollad@schools.nyc.gov ">ECollad@schools.nyc.gov </a></td>
+        <td><a href="mailto:ECollad@schools.nyc.gov">ECollad@schools.nyc.gov</a></td>
       </tr>
       <tr>
         <td>Adam Boxer <br>Assistant Principal of Information Systems</td>
-        <td>(718) 297-6580<br>Ext. 1311</td>
-        <td><a href="mailto:ECollad@schools.nyc.gov ">ECollad@schools.nyc.gov </a></td>
+        <td>(718) 297-6580<br>Ext. 1365</td>
+        <td><a href="mailto:ABoxer2@schools.nyc.gov">ABoxer2@schools.nyc.gov</a></td>
+      </tr>
+      <tr>
+        <td>Navindra Haripersaud<br>Assistant Principal of CTE</td>
+        <td>(718) 297-6580<br>Ext. 4171</td>
+        <td><a href="mailto:NHaripersaud@schools.nyc.gov">NHaripersaud@schools.nyc.gov</a></td>
+      </tr>
+      <tr>
+        <td>Patricia Minogue<br>Assistant Principal of English</td>
+        <td>(718) 297-6580<br>Ext. 2341</td>
+        <td><a href="mailto:PMinogue@schools.nyc.gov">PMinogue@schools.nyc.gov</a></td>
+      </tr>
+      <tr>
+        <td>Stacy Conway<br>Assistant Principal of Math</td>
+        <td>(718) 297-6580<br>Ext. 3191</td>
+        <td><a href="mailto:SMarino4@schools.nyc.gov">SMarino4@schools.nyc.gov</a></td>
+      </tr>
+      <tr>
+        <td>Lotus Triola<br>Assistant Principal of Science</td>
+        <td>(718) 297-6580<br>Ext. 2071</td>
+        <td><a href="mailto:LTriola@schools.nyc.gov">LTriola@schools.nyc.gov</a></td>
+      </tr>
+      <tr>
+        <td>Charles J. Cremeans<br>Assistant Principal of Social Studies and Foreign Language</td>
+        <td>(718) 297-6580<br>Ext. 1181</td>
+        <td><a href="mailto:CCremeans@schools.nyc.gov">CCremeans@schools.nyc.gov</a></td>
+      </tr>
+      <tr>
+        <td>Andrea Scolavino<br>Assistant Principal of ISS, Art and Music</td>
+        <td>(718) 297-6580<br>Ext. 1033</td>
+        <td><a href="mailto:AScolavino@schools.nyc.gov">AScolavino@schools.nyc.gov</a></td>
+      </tr>
+      <tr>
+        <td>Mark D'elia<br>Assistant Principal of Physical Education</td>
+        <td>(718) 297-6580<br>Ext. 1547</td>
+        <td><a href="mailto:AScolavino@schools.nyc.gov">AScolavino@schools.nyc.gov</a></td>
       </tr>
     </table>
   </body>
