🍐🚡 Checkpoint ./staff.html:65479926/96 ./style.css:65479926/31 ./contact.html:65479926/507

--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,19 @@
   </head>
   <body>
     <h1>Contact us Here!</h1>
-    <p>
-      address: <br> number: <br> emails:
-    </p>
+    <table>
+      <tr>
+      <th>Address</th>
+      <td>165-65 84th Avenue<br>Jamaica, NY 11432</td>
+      </tr>
+      <tr>
+        <th>Phone Number</th>
+        <td>+1 (718) 297-6580</td>
+      </tr>
+      <tr>
+        <th>Fax</th>
+        <td>+1 (718) 658-0365</td>
+      </tr>
+    </table>
   </body>
 </html>
