--- a/staff.html
+++ b/staff.html
@@ -83,7 +83,7 @@
       <tr>
         <td>Mark D'elia<br>Assistant Principal of Physical Education</td>
         <td>(718) 297-6580<br>Ext. 1547</td>
-        <td><a href="mailto:AScolavino@schools.nyc.gov">AScolavino@schools.nyc.gov</a></td>
+        <td><a href="mailto:MDelia@schools.nyc.gov">MDelia@schools.nyc.gov</a></td>
       </tr>
     </table>
   </body>
