💗✍️ Checkpoint ./staff.html:65479926/891 ./contact.html:65479926/339

--- a/staff.html
+++ b/staff.html
@@ -15,7 +15,13 @@
 
     <a href="staff.html" class="stafflink">Administration/Staff</a>
 
-    <a href="clubs.html"class="clubslink">Clubs/Organizations</a>
+<div class="clubdropdownmenu">
+          <a href="clubs.html"class="clubslink">Clubs/Organizations</a>
+          <div class="dropdowncontent">
+            <a href="#diffclubpagesgohere">JROTC</a>
+            <a href="#diffclubpagesgohere">PGC</a>
+          </div>
+        </div>
    
     <a href="contact.html" class="contactlink">Contact Us Here!</a>
   </div>
